SERVER-97488: Prevent collection from being dropped and re-added mid-insert (#30392)

GitOrigin-RevId: 980f7a33b1ce935ce85fb7865c02607ea41d5f5f